[feat] 소셜 로그인 및 예외 처리 구현
- 카카오 소셜 로그인(엑세스 토큰 발급, 사용자 정보 조회)
- AuthService 로그인 및 신규회원 등록
- Session 로그인 처리
- Global Exception 구축

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=itsmine
-server.port=9999
+server.port=8080
 
 
 api.lostFoundService.key=AUdXvNUpG%2FUo8T%2F2XZGyIyvKyRSZ5bmhsxQCZiyqn3wfhjLn1yPV9LUF6RApaKV9%2BU2xiPvtrOr4eKuBHSVG3g%3D%3D
@@ -9,3 +9,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/itsmine?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root1234
+
+kakao.client-id=3344b0fe701b9f85c740d61b94fd5881
+kakao.redirect-uri=http://localhost:8080/api/auth/kakao/callback
+
+#spring.security.oauth2.client.registration.kakao.client-id=3344b0fe701b9f85c740d61b94fd5881
+#spring.security.oauth2.client.registration.kakao.redirect-uri=https://localhost:8080/api/auth/kakao/callback
+##spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
+#spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+#spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+
+#?? ?? ?? = https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=3344b0fe701b9f85c740d61b94fd5881&redirect_uri=http://localhost:8080/api/auth/kakao/callback
