[feat] 공공데이터 API 요청 및 json 파싱

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.datasource.password=root1234
 kakao.client-id=3344b0fe701b9f85c740d61b94fd5881
 kakao.redirect-uri=http://localhost:8080/api/auth/kakao/callback
 
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+logging.level.org.springframework.http.converter=DEBUG
+
 #spring.security.oauth2.client.registration.kakao.client-id=3344b0fe701b9f85c740d61b94fd5881
 #spring.security.oauth2.client.registration.kakao.redirect-uri=https://localhost:8080/api/auth/kakao/callback
 ##spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
